--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -5,11 +5,9 @@ html{
 body{
     font-family: 'Roboto', sans-serif;
     color: #333;
+    margin: 0;
 }
-img{
-    max-width: 100%;
-    height: auto;
-}
+
 *{
     box-sizing: border-box;
 }
